2006-12-14  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/i386/Kconfig: define the new way for setting RTNet 
	  availability.
	* base/ipec/netrpc/netrpc.c: use properly the new way of defining 
	  RTNet availability.

2006-12-13  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sched.c: simplified schedule tail, it can be called just
	  within Linux so let's avoiding a useless test.

2006-12-12  Roberto Bucher <roberto.bucher@supsi.ch>

	* /addons/comedi/kcomedi-module.c: Modified the file for REGPARM
	* /addons/comedi/rtai_comedi.h       : Modified the file for REGPARM

2006-12-12  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/devices/rtai_fifoin.c: Added block for FIFO input
	* /rtai-lab/scilab/macros/RTAI/rtai_fifoin.sci: Added block for FIFO input
	* /rtai-lab/scilab/devices/rtai_fifoout.c: Added block for FIFO output
	* /rtai-lab/scilab/macros/RTAI/rtai_fifoout.sci: Added block for FIFO output
	* /rtai-lab/scilab/macros/RTAI/RTAI-Lib.cosfi: Modified Scicos Palette

2006-12-10  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* addons/drivers/serial/rtai_serial.h, addons/drivers/serial/serial.c,
	  addons/rtdm/module.c;
	* base/include/rtai_bits.h, base/include/rtai_fifos.h, 
	  base/include/rtai_mbx.h base/include/rtai_mq.h, 
	  base/include/rtai_msg.h, base/include/rtai_netrpc.h,
	  base/include/rtai_proxies.h, base/include/rtai_registry.h,
	  base/include/rtai_rwl.h, base/include/rtai_sched.h,
	  base/include/rtai_schedcore.h, base/include/rtai_sem.h,
	  base/include/rtai_shm.h, base/include/rtai_spl.h,
	  base/include/rtai_tbx.h;
	* base/include/asm-i386/rtai_hal.h;
	* base/ipc/bits/bits.c, base/ipc/fifos/fifos.c, base/ipc/mbx/mbx.c,
	  base/ipc/mq/mq.c, base/ipc/msg/msg.c, base/ipc/netrpc/netrpc.c,
	  base/ipc/sem/sem.c, base/ipc/shm/shm.c base/ipc/tbx/tbx.c;
	* base/sched/api.c base/sched/sched.c base/sched/sys.c: 
	  all of the aboves changed to allow using Linux with REGPARM enabled.
