@@ -715,8 +715,8 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-@CONFIG_KBUILD_FALSE@distclean-local:
 @CONFIG_KBUILD_FALSE@clean-local:
+@CONFIG_KBUILD_FALSE@distclean-local:
 clean: clean-recursive
 
 clean-am: clean-generic clean-libtool clean-local \
