@@ -1,3 +1,6 @@
+2006-11-07  Pierangelo Masarati <masarati@aero.polimi.it>
+	* add support to keep Linux task priority aligned to RTAI
+
 2006-12-14  Paolo Mantegazza <mantegazza@aero.polimi.it>
 
 	* base/arch/i386/Kconfig: define the new way for setting RTNet 
